# cpp_platformer

./: .gitignore  CMakeLists.txt  Makefile  README.md  plan.txt
src/: Components.hpp  EntityManager.cpp  EntityManager.hpp  GUI.cpp  GUI.hpp  Game.cpp  Game.hpp  QuadTree.cpp  QuadTree.hpp  QuadTreeNode.cpp  QuadTreeNode.hpp  SystemManager.hpp  Systems.cpp  Systems.hpp  Variables.cpp  Variables.hpp  level1.txt  level2.txt  main.cpp
